qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/search/filter/filter.module.css
.dateFilter {
  max-height: 310px;
  transition:
    0.5s ease-in-out max-height,
    0.6s ease-in-out margin-top;
  overflow: hidden;
  margin-top: 20px;
}

.hidden {
  max-height: 0;
  margin-top: 0;
}

.yearContainer,
.monthContainer {
  display: flex;
  align-items: center;
}

.yearDescription,
.monthDescription {
  width: 10%;
  align-self: baseline;
  padding: 10px 0;
}

.yearSelection,
.monthSelection {
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  text-align: center;
}

.yearSelect,
.monthSelect {
  width: max-content;
  border: 1px solid #60b4df;
  border-radius: 50px;
  padding: 5px 20px;
  margin: 5px 7px;
  cursor: pointer;
  transition: 0.2s ease-in-out background;
  user-select: none;
}

.Selected {
  background: #60b4df;
  color: #fff;
}

